[package]
name = "axum_jwt_example"
version = "0.1.0"
authors = ["Andrei Zolkin <iamz4rx@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
async-graphql = { version = "2.11", features = ["chrono", "uuid"] }
async-graphql-axum = "2.11"
axum = { version = "0.3", features = ["headers"] }
bcrypt = "0.10"
chrono = { version = "0.4", features = ["serde"] }
clap = "3.0.0-beta.5"
dotenv = "0.15"
headers = "0.3"
jsonwebtoken = "7.2"
lazy_static = "1.4"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "chrono",
    "uuid",
] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
validator = { version = "0.14", features = ["derive"] }
